update toggle event, support exclusive collapse, support affordance attribute default value

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
 <body>
 	<h1>Open-UI Panelset</h1>
 
-	<oui-panelset>
+	<oui-panelset affordance="tab-bar">
 		<h2>Tabs</h2>
 		<p>
 			The <code>tab-bar</code> affordance
